Re-prepare PreparedStatement in SpatialQueryDT, SpatialQueryPerformanceDT, following DDL.